# iranian-shahanshahi-calendar

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
data/: events.json
examples/: demo.rs
src/: events.rs  lib.rs  main.rs
