[package]
name = "imperial-cal"
version = "0.1.1"
edition = "2024"
authors = ["Ehsan Taheri"]
description = "A library to convert dates to the Iranian Shahanshahi calendar"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ehsan-Taheri/iranian-shahanshahi-calendar"

[lib]
crate-type = ["cdylib", "rlib"] 

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
 
wasm-bindgen = { version = "0.2", optional = true }
clap = { version = "4", features = ["derive"] }

[features]
default = []
wasm = ["wasm-bindgen"] 